--- a/project.json
+++ b/project.json
@@ -5990,6 +5990,147 @@
 		},
 		"\\src\\images\\sprites\\YellowSpell.png": {
 			"sdcard": false
+		},
+		"\\src\\images\\shop\\156ed6d868a1d50fbdfeaef2e4a532f8b0cd4d43.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\shop\\156ed6d868a1d50fbdfeaef2e4a532f8b0cd4d43 - Copy.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\shop\\Shop_00.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\shop\\Shop_01.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\shop\\Shop_02.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\shop\\Shop_03.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\shop\\Shop_04.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\shop\\Shop_05.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\shop\\156ed6d868a1d50fbdfeaef2e4a532f8b0cd4d43.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\shop\\Shop_01.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\shop\\Shop_00.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\shop\\Shop_03.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\shop\\Shop_02.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\shop\\Shop_04.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\shop\\Shop_05.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\shop\\Tile_78.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\shop\\Tile_79.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\shop\\Tile_80.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\shop\\Tile_81.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\shop\\Tile_82.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\shop\\Tile_77.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\background\\Tile_81.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\background\\Tile_82.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\background\\Tile_78.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\background\\Tile_79.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\background\\Tile_80.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\background\\Tile_81.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\background\\Tile_82.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\background\\Tile_78.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\background\\Tile_79.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\background\\Tile_80.h": {
+			"sdcard": false
+		},
+		"\\RogueBoy_Pokitto.bin.2.png": {
+			"sdcard": false
+		},
+		"\\RogueBoy_Pokitto.bin.3.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\shop\\Seller.png": {
+			"sdcard": false
+		},
+		"\\RogueBoy_Pokitto.bin.2.h": {
+			"sdcard": false
+		},
+		"\\RogueBoy_Pokitto.bin.3.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\shop\\Seller.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\background\\Tile_83.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\background\\Tile_84.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\background\\Tile_85.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\SpiderWeb.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\background\\Tile_86.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\SpiderWeb.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\background\\Tile_86.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\background\\Tile_85.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\background\\Tile_83.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\background\\Tile_84.h": {
+			"sdcard": false
 		}
 	},
 	"BUILDFlags": {
